--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Book review system</title>
+  <title>Book review system | {{ info.title }}</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,14 +15,9 @@
 </head>
 <body>
   {% include "layouts/header.html" %}
-  {% include "layouts/banner.html" %}
-
   {% block content %}
 
   {% endblock %}
-
-
-  {% include "layouts/extensions.html" %}
   {% include "layouts/footer.html" %}
 
   {% block js %}
@@ -30,8 +25,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="{% static 'js/materialize.js' %}"></script>
+  <script src="{% static 'js/init.js' %}"></script>
 
   </body>
 </html>
