--- a/templates/layouts/extensions.html
+++ b/templates/layouts/extensions.html
@@ -1,10 +1,11 @@
+{% load staticfiles %}
 <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h4 class="header col s12 light">Book is a good friend</h4>
+        <div class="container">
+            <div class="row center">
+                <h4 class="header col s12 light">Book is a good friend</h4>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
+    <div class="parallax"><img src="{% static 'images/background3.jpg' %}" alt="Unsplashed background img 3"></div>
+</div>
