--- a/templates/admin/layouts/base.html
+++ b/templates/admin/layouts/base.html
@@ -23,8 +23,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="{% static 'js/materialize.js' %}"></script>
+  <script src="{% static 'js/search.js' %}"></script>
 
   </body>
 </html>
