--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,12 +1,13 @@
-{{% extends "admin/layouts/base.html" %}
+{% extends "admin/layouts/base.html" %}
 {% block content %}
-<div >
+<div xmlns="http://www.w3.org/1999/html">
 <div class="row">
   <div class="row"></div>
 </div>
 <div id="login-page" class="row">
   <div class="col s12 m8 offset-m2 l4 offset-l4 z-depth-4 card-panel">
-    <form class="login-form">
+    <form method="post" id="submit-form" class="login-form" action="/admin/login/">
+    {% csrf_token %}
       <div class="row">
         <div class="input-field col s12 center">
           <img class="circle responsive-img valign profile-image-login" alt="" src="images/login-logo.png">
@@ -16,26 +17,30 @@
       <div class="row margin">
         <div class="input-field col s12">
           <i class="mdi-social-person-outline prefix"></i>
-          <input id="username" type="text">
-          <label class="center-align" for="username">Username</label>
+            {{form.username}}
+          <label class="center-align" for="{{form.username.id}}" data-error="wrong">Username</label>
         </div>
+          <div class="input-field col s12 offset-s1 red-text text-darken-5">
+          {% for error in form.username.errors %}
+            <span class="text-center">{{ error }}</span>
+            {% endfor %}
+          </div>
       </div>
       <div class="row margin">
         <div class="input-field col s12">
           <i class="mdi-action-lock-outline prefix"></i>
-          <input id="password" type="password">
+          {{form.password}}
           <label for="password">Password</label>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12 m12 l12 login-text">
-          <input id="remember-me" type="checkbox">
-          <label for="remember-me">Remember me</label>
-        </div>
+          <div class="input-field col s12 offset-s1 red-text text-darken-5"
+              {% for error in form.password.errors %}
+                <span class="text-center">{{ error }}</span>
+                {% endfor %}
+          </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <a class="btn waves-effect waves-light col s12" href="index.html">Login</a>
+          <button type="submit" class="btn waves-effect waves-light col s12">Login</button>
         </div>
       </div>
     </form>
