--- a/templates/admin/layouts/base.html
+++ b/templates/admin/layouts/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Book review system</title>
+  <title>{{ info.title }}</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,7 +14,7 @@
   {% endblock %}
 
 </head>
-<body class="bg-fr">
+<body class="">
 
   {% block content %}
 
