--- a/templates/admin/books/edit.html
+++ b/templates/admin/books/edit.html
@@ -13,8 +13,8 @@
       <div class="col s12 m12 l12">
         <ol class="breadcrumb">
             <li><a href="/admin/">Home</a></li>
-            <li><a href="/admin/categories/">Categories</a></li>
-            <li class="active">Create</li>
+            <li><a href="/admin/books/">Books</a></li>
+            <li class="active">Update</li>
         </ol>
       </div>
     </div>
@@ -24,10 +24,10 @@
 
 <div class="container">
   <div class="section">
-    <p class="caption">Create a new Category</p>
+    <p class="caption">Update Book</p>
     <div class="divider"></div>
       <div class="col s12 m12">
-          {% include "admin/categories/_form.html" with action="" button="Create" %}
+          {% include "admin/books/_form.html" with action="" button="Update" %}
       </div>
   </div>
 </div>
