--- a/templates/admin/categories/edit.html
+++ b/templates/admin/categories/edit.html
@@ -1,9 +1,36 @@
 {% extends "admin/layouts/base.html" %}
 {% block content %}
-{% include "admin/layouts/header.html" %}
 
-{% include "admin/categories/_form.html" with action="" button="Update" %}
+<!--breadcrumbs start-->
+<div id="breadcrumbs-wrapper" class=" grey lighten-3">
+    <!-- Search for small screen -->
+    <div class="header-search-wrapper grey hide-on-large-only">
+        <i class="mdi-action-search active"></i>
+        <input name="Search" class="header-search-input z-depth-2" placeholder="Explore Materialize" type="text">
+    </div>
+  <div class="container">
+    <div class="row">
+      <div class="col s12 m12 l12">
+        <ol class="breadcrumb">
+            <li><a href="/admin/">Home</a></li>
+            <li><a href="/admin/categories/">Categories</a></li>
+            <li class="active">Update</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div>
+<!--breadcrumbs end-->
 
+<div class="container">
+  <div class="section">
+    <p class="caption">Update Category</p>
+    <div class="divider"></div>
+      <div class="col s12 m12">
+          {% include "admin/categories/_form.html" with action="" button="Update" %}
+      </div>
+  </div>
+</div>
+<!--end container-->
 
-{% include "admin/layouts/footer.html" %}
 {% endblock %}
