--- a/templates/admin/categories/index.html
+++ b/templates/admin/categories/index.html
@@ -1,3 +1,121 @@
-{% for category in categories %}
-    <span>{{category.title}}<br></span>
-{% endfor %}
+{% extends "admin/layouts/base.html" %}
+{% block content %}
+
+<!--breadcrumbs start-->
+<div id="breadcrumbs-wrapper" class=" grey lighten-3">
+    <!-- Search for small screen -->
+    <div class="header-search-wrapper grey hide-on-large-only">
+        <i class="mdi-action-search active"></i>
+        <input name="Search" class="header-search-input z-depth-2" placeholder="Explore Materialize" type="text">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m12 l12">
+                <ol class="breadcrumb">
+                    <li><a href="/admin/">Home</a></li>
+                    <li class="active">Categories</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</div>
+<!--breadcrumbs end-->
+
+<div class="container">
+    <div class="section">
+
+        <p class="caption">List Categories</p>
+
+        <div class="divider"></div>
+        {% if categories %}
+        <div class="col s12 m12">
+            <div id="data-table-simple_wrapper" class="dataTables_wrapper">
+                <table id="data-table-simple" class="responsive-table display dataTable striped bordered hoverable"
+                       cellspacing="0" role="grid" aria-describedby="data-table-simple_info">
+                    <thead>
+                    <tr role="row">
+                        <th class="sorting_asc" tabindex="0" aria-controls="data-table-simple" rowspan="1" colspan="1"
+                            style="width: 28px;" aria-label="Name: activate to sort column descending"
+                            aria-sort="ascending">#
+                        </th>
+                        <th class="sorting_asc" tabindex="0" aria-controls="data-table-simple" rowspan="1" colspan="1"
+                            style="width: 248px;" aria-label="Name: activate to sort column descending"
+                            aria-sort="ascending">Title
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="data-table-simple" rowspan="1" colspan="1"
+                            style="width: 588px;" aria-label="Office: activate to sort column ascending">Description
+                        </th>
+                        <th class="sorting" tabindex="0" aria-controls="data-table-simple" rowspan="1" colspan="1"
+                            style="width: 100px;" aria-label="Salary: activate to sort column ascending">Action
+                        </th>
+                    </tr>
+                    </thead>
+                    <tfoot>
+                    <tr>
+                        <th rowspan="1" colspan="1">#</th>
+                        <th rowspan="1" colspan="1">Title</th>
+                        <th rowspan="1" colspan="1">Description</th>
+                        <th rowspan="1" colspan="1">Action</th>
+                    </tr>
+                    </tfoot>
+                    <tbody>
+                    {% for category in categories %}
+                    <tr class="hoverable" role="row">
+                        <td>{{category.id}}</td>
+                        <td class=""><a href="/admin/categories/detail/{{category.id}}">{{category.title}}</a></td>
+                        <td>{{category.description}}</td>
+                        <td>
+                            <div class="row">
+                                <div class="col s5">
+                                    <a href="/admin/categories/update/{{category.id}}"
+                                       class="btn-floating waves-effect waves-light blue-grey"><i
+                                            class=" mdi-editor-mode-edit"></i></a>
+                                </div>
+                                <div class="col s5">
+                                    <a href="/admin/categories/delete/{{category.id}}"
+                                       class="btn-floating waves-effect waves-light brown"><i
+                                            class="  mdi-content-clear"></i></a>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                {% if is_paginated %}
+                <div id="data-table-simple_info" class="dataTables_info" role="status" aria-live="polite">Showing {{
+                    page_obj.number }} of {{ page_obj.paginator.num_pages }} pages
+                </div>
+                <div id="data-table-simple_paginate" class="dataTables_paginate paging_simple_numbers">
+                    {% if page_obj.has_previous %}
+                    <a href="/admin/books?page={{ page_obj.previous_page_number }}" id="data-table-simple_previous"
+                       class="paginate_button previous " aria-controls="data-table-simple" data-dt-idx="0" tabindex="0">Previous</a>
+                    {% endif %}
+            <span>
+                <a class="paginate_button current" aria-controls="data-table-simple" data-dt-idx="1" tabindex="0">{{
+                    page_obj.number }}</a>
+            </span>
+                    {% if page_obj.has_next %}
+                    <a href="/admin/books?page={{ page_obj.next_page_number }}" id="data-table-simple_next"
+                       class="paginate_button next" aria-controls="data-table-simple" data-dt-idx="7"
+                       tabindex="0">Next</a>
+                    {% endif %}
+                </div>
+                {% endif %}
+            </div>
+        </div>
+        {% else %}
+        <div class="row margin">
+            <div class="col s12 offset-s5">
+                <p>No book in this category</p>
+            </div>
+        </div>
+        {% endif %}
+        <!-- Floating Action Button -->
+        {% include "admin/layouts/float_button.html" %}
+        <!-- Floating Action Button -->
+    </div>
+    <!--end container-->
+    {% endblock %}
+
+
