--- a/templates/admin/layouts/footer.html
+++ b/templates/admin/layouts/footer.html
@@ -1,15 +1,7 @@
-<footer class="page-footer teal">
+<footer class="page-footer">
+  <div class="footer-copyright">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company</h5>
-          <p class="grey-text text-lighten-4">
-            Framgia Viet Nam Co.,Ltd<br>
-            13F, KeangNam LandMark 72 Building, E6 Pham Hung, Tu Liem, HN
-            <br>
-            Tel: 04 3795 5417
-          </p>
-        </div>
-      </div>
+      <span>Copyright © 2015 All rights reserved.</span>
     </div>
-  </footer>
+  </div>
+</footer>
