--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,50 +1,72 @@
-{% extends "admin/layouts/base.html" %}
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <title>Book review system</title>
+    <!-- CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="{% static 'css/materialize.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    {% block css %}
+    {% endblock %}
+</head>
+<body class="bg-fr">
 {% block content %}
 <div xmlns="http://www.w3.org/1999/html">
-<div class="row">
-  <div class="row"></div>
-</div>
-<div id="login-page" class="row">
-  <div class="col s12 m8 offset-m2 l4 offset-l4 z-depth-4 card-panel">
-    <form method="post" id="submit-form" class="login-form" action="/admin/login/">
-    {% csrf_token %}
-      <div class="row">
-        <div class="input-field col s12 center">
-          <img class="circle responsive-img valign profile-image-login" alt="" src="images/login-logo.png">
-          <p class="center login-form-text">Book Reviews System</p>
+    <div class="row">
+        <div class="row"></div>
+    </div>
+    <div id="login-page" class="row">
+        <div class="col s12 m8 offset-m2 l4 offset-l4 z-depth-4 card-panel">
+            <form method="post" id="submit-form" class="login-form" action="/admin/login/">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="input-field col s12 center">
+                        <img class="circle responsive-img valign profile-image-login" alt=""
+                             src="images/login-logo.png">
+
+                        <p class="center login-form-text">Book Reviews System</p>
+                    </div>
+                </div>
+                <div class="row margin">
+                    <div class="input-field col s12">
+                        <i class="mdi-social-person-outline prefix"></i>
+                        {{form.username}}
+                        <label class="center-align" for="{{form.username.id}}" data-error="wrong">Username</label>
+                    </div>
+                    <div class="input-field col s12 offset-s1 red-text text-darken-5">
+                        {% for error in form.username.errors %}
+                        <span class="text-center">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="row margin">
+                    <div class="input-field col s12">
+                        <i class="mdi-action-lock-outline prefix"></i>
+                        {{form.password}}
+                        <label for="password">Password</label>
+                    </div>
+                    <div class="input-field col s12 offset-s1 red-text text-darken-5"
+                         {% for error in form.password.errors %}
+                    <span class="text-center">{{ error }}</span>
+                    {% endfor %}
+                </div>
         </div>
-      </div>
-      <div class="row margin">
-        <div class="input-field col s12">
-          <i class="mdi-social-person-outline prefix"></i>
-            {{form.username}}
-          <label class="center-align" for="{{form.username.id}}" data-error="wrong">Username</label>
+        <div class="row">
+            <div class="input-field col s12">
+                <button type="submit" class="btn waves-effect waves-light col s12">Login</button>
+            </div>
         </div>
-          <div class="input-field col s12 offset-s1 red-text text-darken-5">
-          {% for error in form.username.errors %}
-            <span class="text-center">{{ error }}</span>
-            {% endfor %}
-          </div>
-      </div>
-      <div class="row margin">
-        <div class="input-field col s12">
-          <i class="mdi-action-lock-outline prefix"></i>
-          {{form.password}}
-          <label for="password">Password</label>
-        </div>
-          <div class="input-field col s12 offset-s1 red-text text-darken-5"
-              {% for error in form.password.errors %}
-                <span class="text-center">{{ error }}</span>
-                {% endfor %}
-          </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <button type="submit" class="btn waves-effect waves-light col s12">Login</button>
-        </div>
-      </div>
-    </form>
-  </div>
+        </form>
+    </div>
 </div>
 </div>
 {% endblock %}
+<!-- Scripts-->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="{% static 'js/materialize.js' %}"></script>
+<script src="{% static 'js/search.js' %}"></script>
+</body>
+</html>
