--- a/templates/_includes/book_preview.html
+++ b/templates/_includes/book_preview.html
@@ -1,22 +1,27 @@
+{% load staticfiles %}
 <div class="col s12 m4 l4">
   <div class="card">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="images/office.jpg">
+      <img class="activator" src="{% static 'images/office.jpg' %}">
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">This is a link</a></p>
+      <span class="card-title  grey-text text-darken-4"><a href='/books/{{book.id}}-{{book.title.split|join:"-"}}'>{{book.title}}</a><i class="material-icons right activator">more_vert</i></span>
+      <p>Rate & view</p>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4">{{book.title}}<i class="material-icons right">close</i></span>
       <p>
-        Author: quynv
+        Author: {{book.author}}
       </p>
       <p>
-        Published: 12-10-2015
+        Published: {{book.publish_date}}
+      </p>
+      <p>
+        Description: {{book.description|truncatechars:300 }}
       </p>
       <div class="collection">
         <a href="#!" class="collection-item">Add/remove favourites</a>
+        <a href='/books/{{book.id}}-{{book.title.split|join:"-"}}' class="collection-item">View Detail</a>
       </div>
     </div>
   </div>
